k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preconversion-api
  namespace: preconversion
spec:
  selector:
    app: preconversion-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
